--- a/src/plugins/failure/CMakeLists.txt
+++ b/src/plugins/failure/CMakeLists.txt
@@ -1,25 +1,12 @@
-add_library(mavsdk_failure
-    failure.cpp
-    failure_impl.cpp
+target_sources(mavsdk
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/failure.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/failure_impl.cpp
 )
 
-target_link_libraries(mavsdk_failure
-    mavsdk
-)
-
-set_target_properties(mavsdk_failure
-    PROPERTIES COMPILE_FLAGS ${warnings}
-)
-
-target_include_directories(mavsdk_failure PUBLIC
+target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/mavsdk>
-    )
-
-install(TARGETS mavsdk_failure
-    EXPORT mavsdk-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 
 install(FILES
