--- a/src/plugins/ftp/CMakeLists.txt
+++ b/src/plugins/ftp/CMakeLists.txt
@@ -1,37 +1,15 @@
-add_library(mavsdk_ftp
-    ftp.cpp
-    ftp_impl.cpp
-    fs.cpp
-    crc32.cpp
+target_sources(mavsdk
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/ftp.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ftp_impl.cpp
 )
 
-target_link_libraries(mavsdk_ftp
-    mavsdk
-)
-
-set_target_properties(mavsdk_ftp
-    PROPERTIES COMPILE_FLAGS ${warnings}
-    VERSION ${MAVSDK_VERSION_STRING}
-    SOVERSION ${MAVSDK_SOVERSION_STRING}
-)
-
-target_include_directories(mavsdk_ftp PUBLIC
+target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/mavsdk>
     )
 
-install(TARGETS mavsdk_ftp
-    EXPORT mavsdk-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    )
-
 install(FILES
     include/plugins/ftp/ftp.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/ftp
-)
-
-install(DIRECTORY
-    ../../third_party/mavlink/include/mavlink
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/ftp
 )
