--- a/src/plugins/log_files/CMakeLists.txt
+++ b/src/plugins/log_files/CMakeLists.txt
@@ -1,27 +1,12 @@
-add_library(mavsdk_log_files
-    log_files.cpp
-    log_files_impl.cpp
+target_sources(mavsdk
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/log_files.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/log_files_impl.cpp
 )
 
-target_link_libraries(mavsdk_log_files
-    mavsdk
-)
-
-set_target_properties(mavsdk_log_files
-    PROPERTIES COMPILE_FLAGS ${warnings}
-    VERSION ${MAVSDK_VERSION_STRING}
-    SOVERSION ${MAVSDK_SOVERSION_STRING}
-)
-
-target_include_directories(mavsdk_log_files PUBLIC
+target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/mavsdk>
-    )
-
-install(TARGETS mavsdk_log_files
-    EXPORT mavsdk-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 
 install(FILES
