--- a/src/plugins/mission_raw/CMakeLists.txt
+++ b/src/plugins/mission_raw/CMakeLists.txt
@@ -1,31 +1,12 @@
-add_library(mavsdk_mission_raw
-    mission_raw.cpp
-    mission_raw_impl.cpp
+target_sources(mavsdk
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/mission_raw.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/mission_raw_impl.cpp
 )
 
-include_directories(
-    ${PROJECT_SOURCE_DIR}/core
-)
-
-set_target_properties(mavsdk_mission_raw
-    PROPERTIES COMPILE_FLAGS ${warnings}
-    VERSION ${MAVSDK_VERSION_STRING}
-    SOVERSION ${MAVSDK_SOVERSION_STRING}
-)
-
-target_link_libraries(mavsdk_mission_raw
-    mavsdk
-)
-
-target_include_directories(mavsdk_mission_raw PUBLIC
+target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/mavsdk>
-    )
-
-install(TARGETS mavsdk_mission_raw
-    EXPORT mavsdk-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 
 install(FILES
