--- a/src/plugins/manual_control/CMakeLists.txt
+++ b/src/plugins/manual_control/CMakeLists.txt
@@ -1,25 +1,12 @@
-add_library(mavsdk_manual_control
-    manual_control.cpp
-    manual_control_impl.cpp
+target_sources(mavsdk
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/manual_control.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/manual_control_impl.cpp
 )
 
-target_link_libraries(mavsdk_manual_control
-    mavsdk
-)
-
-set_target_properties(mavsdk_manual_control
-    PROPERTIES COMPILE_FLAGS ${warnings}
-)
-
-target_include_directories(mavsdk_manual_control PUBLIC
+target_include_directories(mavsdk PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include/mavsdk>
-    )
-
-install(TARGETS mavsdk_manual_control
-    EXPORT mavsdk-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     )
 
 install(FILES
