--- a/src/plugins/ftp/CMakeLists.txt
+++ b/src/plugins/ftp/CMakeLists.txt
@@ -2,6 +2,8 @@ target_sources(mavsdk
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ftp.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ftp_impl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/fs.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/crc32.cpp
 )
 
 target_include_directories(mavsdk PUBLIC
