--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,6 +165,21 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
+  debian-packaging:
+    name: Ubuntu/Debian packaging (Ubuntu 20.04)
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: install packages
+        run: sudo apt-get update && sudo apt-get install -y build-essential debhelper fakeroot libjsoncpp-dev libcurl4-openssl-dev libtinyxml2-dev libjsoncpp1 libcurl4 libtinyxml2-6a
+      - name: generate changelog
+        run: ./tools/generate_debian_changelog.sh > debian/changelog
+      - name: Build package
+        run: dpkg-buildpackage -us -uc -b
+
   rpm-package:
     name: ${{ matrix.container_name }} (package, non-mavsdk_server)
     runs-on: ubuntu-18.04
@@ -252,9 +267,6 @@ jobs:
         run: ./build/release/src/unit_tests_runner
       - name: test (mavsdk_server)
         run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
-      - name: Check the artifact
-        run: |
-          file "./install/bin/mavsdk_server"
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
@@ -265,132 +277,79 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-linux-armv7l-musl:
-    name: linux-armv7l-musl
+  dockcross-linux-musl:
+    name: ${{ matrix.arch_name }}
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        arch_name: [linux-armv7l-musl, linux-arm64-musl]
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: setup dockcross
-        run: docker run --rm dockcross/linux-armv7l-musl > ./dockcross-linux-armv7l-musl; chmod +x ./dockcross-linux-armv7l-musl
-      - name: configure
-        run: ./dockcross-linux-armv7l-musl /bin/bash -c 'cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-armv7l-musl/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-armv7l-musl -H.'
-      - name: build
-        run: ./dockcross-linux-armv7l-musl cmake --build build/linux-armv7l-musl -j 2 --target install
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/linux-armv7l-musl/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_linux-armv7l-musl'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  dockcross-linux-arm64-musl:
-    name: linux-arm64-musl
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: setup dockcross
-        run: docker run --rm dockcross/linux-arm64-musl > ./dockcross-linux-arm64-musl; chmod +x ./dockcross-linux-arm64-musl
-      - name: configure
-        run: ./dockcross-linux-arm64-musl /bin/bash -c 'cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/linux-arm64-musl/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/linux-arm64-musl -H.'
-      - name: build
-        run: ./dockcross-linux-arm64-musl cmake --build build/linux-arm64-musl -j 2 --target install
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/linux-arm64-musl/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_linux-arm64-musl'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  dockcross-android-arm:
-    name: android-arm
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: setup dockcross
-        run: docker run --rm dockcross/android-arm > ./dockcross-android-arm; chmod +x ./dockcross-android-arm
+        run: docker run --rm dockcross/${{ matrix.arch_name }} > ./dockcross-${{ matrix.arch_name }}; chmod +x ./dockcross-${{ matrix.arch_name }}
       - uses: actions/cache@v2
         id: cache
         with:
-          path: ./build/android-arm/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
+          path: ./build/${{ matrix.arch_name }}/third_party/install
+          key: ${{ github.job }}-${{ matrix.arch_name }}-${{ hashFiles('./third_party/**') }}
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
-        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/android-arm/third_party/install" >> $GITHUB_ENV
+        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/${{ matrix.arch_name }}/third_party/install" >> $GITHUB_ENV
       - name: configure
-        run: ./dockcross-android-arm /bin/bash -c 'cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/android-arm -H.'
+        run: ./dockcross-${{ matrix.arch_name }} /bin/bash -c 'cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.arch_name }}/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_MAVSDK_SERVER=ON -DWERROR=OFF -j 2 -Bbuild/${{ matrix.arch_name }} -H.'
       - name: build
-        run: ./dockcross-android-arm cmake --build build/android-arm -j 2 --target install
-      - name: create tar with header and library
-        run: mkdir -p build/android-arm/export/include; cp build/android-arm/install/include/mavsdk/mavsdk_server/mavsdk_server_api.h build/android-arm/export/include; mkdir -p build/android-arm/export/armeabi-v7a; cp build/android-arm/install/lib/libmavsdk_server.so build/android-arm/export/armeabi-v7a; tar -C build/android-arm/export -cf build/android-arm/export/mavsdk_server_android-arm.tar armeabi-v7a include;
+        run: ./dockcross-${{ matrix.arch_name }} cmake --build build/${{ matrix.arch_name }} -j 2 --target install
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/android-arm/export/mavsdk_server_android-arm.tar'
-          asset_name: 'mavsdk_server_android-arm.tar'
+          file: 'build/${{ matrix.arch_name }}/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_${{ matrix.arch_name }}'
           tag: ${{ github.ref }}
           overwrite: true
 
-  dockcross-android-arm64:
-    name: android-arm64
+  dockcross-android:
+    name: ${{ matrix.name }}
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        include:
+          - name: android-arm
+            arch: armeabi-v7a
+          - name: android-arm64
+            arch: arm64-v8a
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
       - name: setup dockcross
-        run: docker run --rm dockcross/android-arm64 > ./dockcross-android-arm64; chmod +x ./dockcross-android-arm64
+        run: docker run --rm dockcross/${{ matrix.name }} > ./dockcross-${{ matrix.name }}; chmod +x ./dockcross-${{ matrix.name }}
       - uses: actions/cache@v2
         id: cache
         with:
-          path: ./build/android-arm64/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
+          path: ./build/${{ matrix.name }}/third_party/install
+          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**') }}
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
-        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/android-arm64/third_party/install" >> $GITHUB_ENV
+        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=/work/build/${{ matrix.name }}/third_party/install" >> $GITHUB_ENV
       - name: configure
-        run: ./dockcross-android-arm64 /bin/bash -c 'cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/android-arm64/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -j 2 -Bbuild/android-arm64 -H.'
+        run: ./dockcross-${{ matrix.name }} /bin/bash -c 'cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/${{ matrix.name }}/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/${{ matrix.name }} -H.'
       - name: build
-        run: ./dockcross-android-arm64 cmake --build build/android-arm64 -j 2 --target install
+        run: ./dockcross-${{ matrix.name }} cmake --build build/${{ matrix.name }} -j 2 --target install
       - name: create tar with header and library
-        run: mkdir -p build/android-arm64/export/include; cp build/android-arm64/install/include/mavsdk/mavsdk_server/mavsdk_server_api.h build/android-arm64/export/include; mkdir -p build/android-arm64/export/arm64-v8a; cp build/android-arm64/install/lib/libmavsdk_server.so build/android-arm64/export/arm64-v8a; tar -C build/android-arm64/export -cf build/android-arm64/export/mavsdk_server_android-arm64.tar arm64-v8a include;
+        run: mkdir -p build/${{ matrix.name }}/export/include; cp build/${{ matrix.name }}/install/include/mavsdk/mavsdk_server/mavsdk_server_api.h build/${{ matrix.name }}/export/include; mkdir -p build/${{ matrix.name }}/export/${{ matrix.arch }}; cp build/${{ matrix.name }}/install/lib/libmavsdk_server.so build/${{ matrix.name }}/export/${{ matrix.arch }}; tar -C build/${{ matrix.name }}/export -cf build/${{ matrix.name }}/export/mavsdk_server_${{ matrix.name }}.tar ${{ matrix.arch }} include;
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/android-arm64/export/mavsdk_server_android-arm64.tar'
-          asset_name: 'mavsdk_server_android-arm64.tar'
+          file: 'build/${{ matrix.name }}/export/mavsdk_server_${{ matrix.name }}.tar'
+          asset_name: 'mavsdk_server_${{ matrix.name }}.tar'
           tag: ${{ github.ref }}
           overwrite: true
-
-  debian-packaging:
-    name: Ubuntu/Debian packaging (Ubuntu 20.04)
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-          fetch-depth: 0
-      - name: Install lcov
-        run: sudo apt-get update && sudo apt-get install -y build-essential debhelper fakeroot libjsoncpp-dev libcurl4-openssl-dev libtinyxml2-dev libjsoncpp1 libcurl4 libtinyxml2-6a
-      - name: Generate changelog
-        run: ./tools/generate_debian_changelog.sh > debian/changelog
-      - name: Build package
-        run: dpkg-buildpackage -us -uc -b
 
   macOS:
     name: macOS
