--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -352,43 +352,15 @@ jobs:
           overwrite: true
 
   macOS:
-    name: macOS
+    name: ${{ matrix.name }}
     runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ./build/release/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
-      - name: disable superbuild on cache hit
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/release/third_party/install" >> $GITHUB_ENV
-      - name: set SDKROOT value
-        run: echo "SDKROOT=$(xcrun --sdk macosx --show-sdk-path)" >> $GITHUB_ENV
-      - name: configure
-        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/release/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/release -H.
-      - name: build
-        run: cmake --build build/release -j 2 --target install
-      - name: test (core)
-        run: ./build/release/src/unit_tests_runner
-      - name: test (mavsdk_server)
-        run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
-      - name: Publish artefacts
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/release/install/bin/mavsdk_server'
-          asset_name: 'mavsdk_server_macos'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-  macOS-framework:
-    name: macOS-framework
-    runs-on: macos-latest
+    strategy:
+      matrix:
+        include:
+          - name: macOS
+            build-framework: OFF
+          - name: macOS-framework
+            build-framework: ON
     steps:
       - uses: actions/checkout@v2
         with:
@@ -397,21 +369,36 @@ jobs:
         id: cache
         with:
           path: ./build/macos/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}
+          key: ${{ github.job }}-${{ matrix.name }}-${{ hashFiles('./third_party/**') }}
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/macos/third_party/install" >> $GITHUB_ENV
       - name: set SDKROOT value
         run: echo "SDKROOT=$(xcrun --sdk macosx --show-sdk-path)" >> $GITHUB_ENV
       - name: configure
-        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/macos/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DMACOS_FRAMEWORK=ON -DWERROR=OFF -j 2 -Bbuild/macos -H.
+        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=build/macos/install -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DMACOS_FRAMEWORK=${{ matrix.build-framework }} -DWERROR=OFF -j 2 -Bbuild/macos -H.
       - name: build
         run: cmake --build build/macos -j 2 --target install
-      - uses: actions/upload-artifact@v2
+      - name: test (core)
+        run: ./build/macos/src/unit_tests_runner
+      - name: test (mavsdk_server)
+        run: ./build/macos/src/mavsdk_server/test/unit_tests_mavsdk_server
+      - name: Upload framework as artefact
+        if: ${{ matrix.build-framework }} == 'ON'
+        uses: actions/upload-artifact@v2
         with:
           name: mavsdk_server_macos.framework
           path: ./build/macos/src/mavsdk_server/src/mavsdk_server.framework
           retention-days: 2
+      - name: Publish mavsdk_server_macos to github release
+        if: startsWith(github.ref, 'refs/tags/v') && ${{ matrix.build-framework }} == 'OFF'
+        uses: svenstaro/upload-release-action@v1-release
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: 'build/macos/install/bin/mavsdk_server'
+          asset_name: 'mavsdk_server_macos'
+          tag: ${{ github.ref }}
+          overwrite: true
 
   iOS:
     name: ${{ matrix.name }}
