XCFramework now depends on macOS and iOS jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -439,7 +439,7 @@ jobs:
 
   iOS-XCFramework:
     name: iOS XCFramework
-    needs: [macOS-framework, iOS, iOS-Simulator]
+    needs: [macOS, iOS]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
