--- a/docker/Dockerfile-Ubuntu-20.04
+++ b/docker/Dockerfile-Ubuntu-20.04
@@ -29,6 +29,7 @@ RUN apt-get update \
         libtinyxml2-dev \
         libtool \
         libz-dev \
+        locales \
         ninja-build \
         python3 \
         python3-pip \
