--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
     - 'main'
+    tags:
+    - '*'
   pull_request:
     branches:
       - '*'
@@ -14,7 +16,23 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
-        with:
-          submodules: recursive
       - name: Run prototool
         run: docker run -v "$(pwd):/work" uber/prototool:1.9.0 prototool lint protos
+
+  deploy:
+    name: deploy
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v1
+      - name: Install prerequisites
+        run: pip install --user auditwheel twine
+      - name: Create wheel
+        working-directory: ./pb_plugins
+        run: python setup.py bdist_wheel
+      - name: Deploy to PyPi
+        env:
+          TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_NON_INTERACTIVE: 1
+        if: startsWith(github.ref, 'refs/tags/')
+        run: twine upload dist/*.whl
