mission: move QGC plan import from mission to mission_raw
This moves the method to import QGroundControl .plan JSON mission files
from the mission plugin to the mission_raw plugin.

The reasoning is as follows:
The imported missions did not really fit the Mission API, and I guess
that the mission progress was often wrong. When the missions were
imported into mission, many items/commands were unsupported and dropped
with a warning. Such a warning is not visible in the language wrappers
and could lead to surprises. The documentation said that the method
would fail if any unsupported item was being imported, however, that
was not true anymore in code.

Therefore, in my opinion, it makes a lot more sense to implement the
import in mission_raw where all/any mission items and commands can be
imported. It's should be more complete, without surprises, and
therefore safer to use.

And in later steps we can also add geofence and rally items to this API.

This PR contains the proto change and the implementation in code. It
also slightly improves the parsing by moving it to a separate file and
adding a bit more unit test coverage.

--- a/src/plugins/mission_raw/CMakeLists.txt
+++ b/src/plugins/mission_raw/CMakeLists.txt
@@ -1,6 +1,9 @@
+find_package(JsonCpp REQUIRED)
+
 add_library(mavsdk_mission_raw
     mission_raw.cpp
     mission_raw_impl.cpp
+    mission_import.cpp
 )
 
 include_directories(
@@ -14,7 +17,10 @@ set_target_properties(mavsdk_mission_raw
 )
 
 target_link_libraries(mavsdk_mission_raw
+    PUBLIC
     mavsdk
+    PRIVATE
+    JsonCpp::jsoncpp
 )
 
 target_include_directories(mavsdk_mission_raw PUBLIC
@@ -32,3 +38,8 @@ install(FILES
     include/plugins/mission_raw/mission_raw.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/mavsdk/plugins/mission_raw
 )
+
+list(APPEND UNIT_TEST_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/mission_import_test.cpp
+)
+set(UNIT_TEST_SOURCES ${UNIT_TEST_SOURCES} PARENT_SCOPE)
