--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -267,6 +267,12 @@ jobs:
         run: ./build/release/src/unit_tests_runner
       - name: test (mavsdk_server)
         run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
+      - name: Upload as artefact
+        uses: actions/upload-artifact@v2
+        with:
+          name: mavsdk_server_musl_x86_64
+          path: ./install/bin/mavsdk_server
+          retention-days: 2
       - name: Publish artefacts
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
