--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Build and Test
 on:
   push:
     branches:
-    - 'master'
-    - 'develop'
+    - 'main'
     tags:
     - 'v*'
   pull_request:
