--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -510,14 +510,14 @@ jobs:
         run: cmake --build build/release -j 2 --config Release --target install
       - name: Create zip file mavsdk libraries
         if: startsWith(github.ref, 'refs/tags/v')
-        run: cd build/release/install && 7z.exe a -tzip ../../../mavsdk-release.zip . && cd ../../..
+        run: cd build/release/install && 7z.exe a -tzip ../../../mavsdk-windows-x64-release.zip . && cd ../../..
       - name: Publish mavsdk libraries
         if: startsWith(github.ref, 'refs/tags/v')
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'mavsdk-release.zip'
-          asset_name: 'mavsdk-release.zip'
+          file: 'mavsdk-windows-x64-release.zip'
+          asset_name: 'mavsdk-windows-x64-release.zip'
           tag: ${{ github.ref }}
           overwrite: true
       - name: Publish mavsdk_server binary
