--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: hcb <hcb@archaeopteryx>
 Build-Depends: debhelper (>= 11), libjsoncpp-dev, libcurl4-openssl-dev, libtinyxml2-dev
 Standards-Version: 4.1.3
 Section: libs
-Homepage: https://mavsdk.mavlink.io/develop/en/index.html
+Homepage: https://mavsdk.mavlink.io/main/en/index.html
 Vcs-Browser: https://github.com/mavlink/MAVSDK
 Vcs-Git: https://github.com/mavlink/MAVSDK.git
 
