Initial hunter support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,11 +29,19 @@ option(CMAKE_POSITION_INDEPENDENT_CODE "Position independent code" ON)
 
 include(cmake/compiler_flags.cmake)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
-
 find_package(Threads REQUIRED)
-find_package(CURL REQUIRED)
-find_package(tinyxml2 REQUIRED)
+
+if(NOT HUNTER_ENABLED)
+    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
+    find_package(CURL REQUIRED)
+    find_package(tinyxml2 REQUIRED)
+else()
+    hunter_add_package(jsoncpp)
+    hunter_add_package(tinyxml2)
+    hunter_add_package(CURL)
+    find_package(CURL REQUIRED CONFIG)
+    find_package(tinyxml2 REQUIRED CONFIG)
+endif()
 
 if(BUILD_TESTS AND (IOS OR ANDROID))
     message(STATUS "Building for iOS or Android: forcing BUILD_TESTS to FALSE...")
