examples: modernize set_actuator example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(mavshell)
 add_subdirectory(manual_control)
 add_subdirectory(multiple_drones)
 add_subdirectory(offboard_velocity)
+add_subdirectory(set_actuator)
 add_subdirectory(takeoff_land)
 add_subdirectory(transition_vtol_fixed_wing)
 add_subdirectory(tune)
