--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(multiple_drones)
 add_subdirectory(offboard_velocity)
 add_subdirectory(set_actuator)
 add_subdirectory(takeoff_land)
+add_subdirectory(terminate)
 add_subdirectory(transition_vtol_fixed_wing)
 add_subdirectory(tune)
 add_subdirectory(ftp_client)
